avancée jusqu'à la partie activités

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,7 @@
           </button>
         </form>
 
+
         <!--Ajout d'un formulaire pour les filtres -->
         <form id="c_filters" method="post" action="http://traitement.php">
           <p class="title">Filtres</p>
@@ -73,186 +74,283 @@
           </p>
         </div>
       </article>
+
+
       <!--Article conternant les hébgements et la section populaires -->
       <article id="Hébergements">
-      <section id="c_hebergements">
-        <h2>Hébergements à Marseille</h2>
-        <div class="box-row">
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/aubergedelacannebiere.jpg" alt="Auberge de la cannebiere"/>
-            </div>
-            <div class="description">
-              <p class="name">Auberge de La Cannebière</p>
-              <p class="price">Nuit à partir de <span>25 €</span></p>
-              <div class="rate boxh1">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/hotelduport.jpg" alt="hôtel du port">
-            </div>
-            <div class="description">
-              <p class="name">Hôtel du port</p>
-              <p class="price">Nuit à partir de <span>52 €</span></p>
-              <div class="rate boxh2">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/hotellesmouettes.jpg" alt="hôtel les mouettes">
-            </div>
-            <div class="description">
-              <p class="name">Hôtel Les mouettes</p>
-              <p class="price">Nuit à partir de <span>76 €</span></p>
-              <div class="rate boxh3">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="box-row">
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo"  src="images/hebergements/hoteldelamer.jpg" alt="hôtel de la mer">
-            </div>
-            <div class="description">
-              <p class="name">Hôtel de la mer</p>
-              <p class="price">Nuit à partir de <span>46 €</span></p>
-              <div class="rate boxh4">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/aubergelepanier.jpg" alt="auberge le panier">
-            </div>
-            <div class="description">
-              <p class="name">Auberge Le Panier</p>
-              <p class="price">Nuit à partir de <span>23 €</span></p>
-              <div class="rate boxh5">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/hotelchezamina.jpg" alt="hôtel chez amina">
-            </div>
-            <div class="description">
-              <p class="name">Hôtel chez Amina</p>
-              <p class="price">Nuit à partir de <span>96 €</span></p>
-              <div class="rate boxh6">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a id="more" href="#">Afficher plus</a> 
-      </section>
+        <section class="card hotels">
+          <div class="cont_card">
+            <h2>Hébergements à Marseille</h2>
 
-      <!--aside-->
-      <aside id="top_aside">
-        <div class="title">
-          <h2>Les plus populaires</h2>
-          <i class="fa-solid fa-star"></i>
-        </div>
-        <div class="box-row">
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/aubergedelacannebiere.jpg" alt="Auberge de la cannebiere"/>
-            </div>
-            <div class="description">
-              <p class="name">Auberge de La Cannebière</p>
-              <p class="price">Nuit à partir de <span>25 €</span></p>
-              <div class="rate boxh1">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+            <div class="box-row">
+              <div class="s_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_scpic">
+                  <img class="photo" src="images/hebergements/aubergedelacannebiere.jpg"
+                    alt="Auberge de la cannebiere" />
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Auberge de La Cannebière</p>
+                    <p class="price">Nuit à partir de <span>25 €</span></p>
+                  </div>
+                  <div class="rate boxh1">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="s_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_scpic">
+                  <img class="photo" src="images/hebergements/hotelduport.jpg" alt="hôtel du port">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Hôtel du port</p>
+                    <p class="price">Nuit à partir de <span>52 €</span></p>
+                  </div>
+                  <div class="rate boxh2">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="s_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_scpic">
+                  <img class="photo" src="images/hebergements/hotellesmouettes.jpg" alt="hôtel les mouettes">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Hôtel Les mouettes</p>
+                    <p class="price">Nuit à partir de <span>76 €</span></p>
+                  </div>
+                  <div class="rate boxh3">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/hotelduport.jpg" alt="hôtel du port">
-            </div>
-            <div class="description">
-              <p class="name">Hôtel du port</p>
-              <p class="price">Nuit à partir de <span>52 €</span></p>
-              <div class="rate boxh2">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+            <div class="box-row">
+              <div class="s_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_scpic">
+                  <img class="photo" src="images/hebergements/hoteldelamer.jpg" alt="hôtel de la mer">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Hôtel de la mer</p>
+                    <p class="price">Nuit à partir de <span>46 €</span></p>
+                  </div>
+                  <div class="rate boxh4">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="s_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_scpic">
+                  <img class="photo" src="images/hebergements/aubergelepanier.jpg" alt="auberge le panier">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Auberge Le Panier</p>
+                    <p class="price">Nuit à partir de <span>23 €</span></p>
+                  </div>
+                  <div class="rate boxh5">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="s_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_scpic">
+                  <img class="photo" src="images/hebergements/hotelchezamina.jpg" alt="hôtel chez amina">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Hôtel chez Amina</p>
+                    <p class="price">Nuit à partir de <span>96 €</span></p>
+                  </div>
+                  <div class="rate boxh6">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
               </div>
             </div>
+            <a id="more" href="#">Afficher plus</a>
           </div>
-          <div class="small_box">
-            <a href="#" class="sb_link"></a>
-            <div class="c_sbpic">
-              <img class="photo" src="images/hebergements/hotellesmouettes.jpg" alt="hôtel les mouettes">
-            </div>
-            <div class="description">
-              <p class="name">Hôtel Les mouettes</p>
-              <p class="price">Nuit à partir de <span>76 €</span></p>
-              <div class="rate boxh3">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </div>
-          </div>
-        </div>
+        </section>
 
-      </aside>
+        <!--aside-->
+        <aside class="card ">
+          <div class="c_aside">
+            <div class="title">
+              <h2>Les plus populaires</h2>
+              <i class="fa-solid fa-star fa-lg"></i>
+            </div>
+            <div class="box-row">
+              <div class="m_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_mcpic">
+                  <img class="photo" src="images/hebergements/hotellesoleildumatin.jpg" alt="Le soleil du matin" />
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Hôtel Le soleil du matin</p>
+                    <p class="price">Nuit à partir de <span>128 €</span></p>
+                  </div>
+                  <div class="rate boxh7">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="m_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_mcpic">
+                  <img class="photo" src="images/hebergements/aucoeurdeleau.jpg" alt="Au coeur de l'eau">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Au coeur de l'eau </br>
+                      Chambres d'hôtes
+                    </p>
+                    <p class="price">Nuit à partir de <span>71 €</span></p>
+                  </div>
+                  <div class="rate boxh8">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="m_card">
+                <a href="#" class="c_link"></a>
+                <div class="c_mcpic">
+                  <img class="photo" src="images/hebergements/hoteltoutbleuetblanc.jpg" alt="Hôtel Tout bleu et Blanc">
+                </div>
+                <div class="description">
+                  <div class="nameandprice">
+                    <p class="name">Hôtel Tout bleu et Blanc</p>
+                    <p class="price">Nuit à partir de <span>68 €</span></p>
+                  </div>
+                  <div class="rate boxh9">
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                    <i class="fa-solid fa-star fa-xs"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
       </article>
 
-      <article id="Activités"></article>
+
+      <!--Article concernant les activités -->
+      <article id="Activités">
+        <div class="c_activities">
+          <h2>Activités à Marseille</h2>
+          <div class="c_columnbox">
+            <div class="box-column x1">
+              <div class="a_card l">
+                <a href="#" class="c_link"></a>
+                <div class="c_apic">
+                  <img class="photo" src="images/activites/vieuxport.jpg" alt="Vieux Port">
+                </div>
+                <div class="name">
+                  <p>Vieux Port</p>
+                </div>
+              </div>
+            </div>
+            <div class="box-column x2">
+              <div class="a_card m">
+                <a href="#" class="c_link"></a>
+                <div class="c_apic">
+                  <img class="photo" src="images/activites/fortdepomegues.jpg" alt="Fort de Pomègues">
+                </div>
+                <div class="name">
+                  <p>Fort de Pomègues</p>
+                </div>
+              </div>
+              <div class="a_card s">
+                <a href="#" class="c_link"></a>
+                <div class="c_apic">
+                  <img class="photo" src="images/activites/ilesdufrioul.jpg" alt="Îles du Frioul">
+                </div>
+                <div class="name">
+                  <p>Îles du Frioul</p>
+                </div>
+              </div>
+            </div>
+            <div class="box-column x1">
+              <div class="a_card l">
+                <a href="#" class="c_link"></a>
+                <div class="c_apic">
+                  <img class="photo" src="images/activites/parcnationaldescalanques.jpg"
+                    alt="Parc National des Calanques">
+                </div>
+                <div class="name">
+                  <p>Parc National des Calanques</p>
+                </div>
+              </div>
+            </div>
+            <div class="box-column x2">
+              <div class="a_card m">
+                <a href="#" class="c_link"></a>
+                <div class="c_apic">
+                  <img class="photo" src="images/activites/parclongchamp.jpg" alt="Parc Longchamp">
+                </div>
+                <div class="name">
+                  <p>Parc Longchamp</p>
+                </div>
+              </div>
+              <div class="a_card s">
+                <a href="#" class="c_link"></a>
+                <div class="c_apic">
+                  <img class="photo" src="images/activites/notredamedelagarde.jpg" alt="Notre-Dame-de-la-Garde">
+                </div>
+                <div class="name">
+                  <p>Notre-Dame-de-la-Garde</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
     </main>
     <footer>
-
     </footer>
   </div>
 </body>
