--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="c_page">
+  <div id="body-c">
     <header>
       <!--Header avec logo et menu de navigation à droite-->
       <img id="booki" src="images/logo/Booki.png" alt="Booki" />
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main>
-      <article id="A_search">
+      <article id="research">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre ville ou en pleine nature</p>
 
@@ -43,32 +43,32 @@
 
 
         <!--Ajout d'un formulaire pour les filtres -->
-        <form id="c_filters" method="post" action="http://traitement.php">
+        <form id="c-filters" method="post" action="http://traitement.php">
           <p class="title">Filtres</p>
-          <div id="c_bars"><label class="f_choice" for="economique" id="economique">
+          <div id="c-bars"><label class="filter_value" for="economique" id="economique">
               <input class="filter" type="checkbox" name="economique" />
-              <div class="icon"><i class="fa-solid fa-money-bill-wave"></i></div>
+              <div class="filter_icon"><i class="fa-solid fa-money-bill-wave"></i></div>
               &#201;conomique
             </label>
-            <label class="f_choice" for="familial" id="familial">
+            <label class="filter_value" for="familial" id="familial">
               <input class="filter" type="checkbox" name="familial" />
-              <div class="icon"><i class="fa-solid fa-child-reaching fa-lg"></i></div>
+              <div class="filter_icon"><i class="fa-solid fa-child-reaching fa-lg"></i></div>
               Familial
             </label>
-            <label class="f_choice" for="Romantique" id="Romantique">
+            <label class="filter_value" for="Romantique" id="Romantique">
               <input class="filter" type="checkbox" name="Romantique" />
-              <div class="icon"><i class="fa-solid fa-heart"></i></div>
+              <div class="filter_icon"><i class="fa-solid fa-heart"></i></div>
               Romantique
             </label>
-            <label class="f_choice" for="Animaux" id="Animaux">
+            <label class="filter_value" for="Animaux" id="Animaux">
               <input class="filter" type="checkbox" name="Animaux" />
-              <div class="icon"><i class="fa-solid fa-dog"></i></div>
+              <div class="filter_icon"><i class="fa-solid fa-dog"></i></div>
               Animaux autorisés
             </label>
           </div>
         </form>
-        <div id="c_info">
-          <div id="info"><i class="fa-solid fa-info"></i></div>
+        <div id="c-info">
+          <div id="info-c"><i class="fa-solid fa-info"></i></div>
           <p>
             Plus de 500 logements sont disponibles dans cette ville
           </p>
@@ -78,23 +78,23 @@
 
       <!--Article conternant les hébgements et la section populaires -->
       <article id="Hébergements">
-        <section class="card hotels">
-          <div class="cont_card">
+        <section class="hotels">
+          <div class="hotels-c">
             <h2>Hébergements à Marseille</h2>
 
-            <div class="box-row">
-              <div class="s_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_scpic">
+            <div class="cards-row">
+              <div class="card xs_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo xs_photo">
                   <img class="photo" src="images/hebergements/aubergedelacannebiere.jpg"
                     alt="Auberge de la cannebiere" />
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Auberge de La Cannebière</p>
                     <p class="price">Nuit à partir de <span>25 €</span></p>
                   </div>
-                  <div class="rate boxh1">
+                  <div class="rate hotel_card1">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -103,17 +103,17 @@
                   </div>
                 </div>
               </div>
-              <div class="s_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_scpic">
+              <div class="card xs_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo xs_photo">
                   <img class="photo" src="images/hebergements/hotelduport.jpg" alt="hôtel du port">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Hôtel du port</p>
                     <p class="price">Nuit à partir de <span>52 €</span></p>
                   </div>
-                  <div class="rate boxh2">
+                  <div class="rate hotel_card2">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -122,17 +122,17 @@
                   </div>
                 </div>
               </div>
-              <div class="s_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_scpic">
+              <div class="card xs_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo xs_photo">
                   <img class="photo" src="images/hebergements/hotellesmouettes.jpg" alt="hôtel les mouettes">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Hôtel Les mouettes</p>
                     <p class="price">Nuit à partir de <span>76 €</span></p>
                   </div>
-                  <div class="rate boxh3">
+                  <div class="rate hotel_card3">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -142,18 +142,18 @@
                 </div>
               </div>
             </div>
-            <div class="box-row">
-              <div class="s_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_scpic">
+            <div class="cards-row">
+              <div class="card xs_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo xs_photo">
                   <img class="photo" src="images/hebergements/hoteldelamer.jpg" alt="hôtel de la mer">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Hôtel de la mer</p>
                     <p class="price">Nuit à partir de <span>46 €</span></p>
                   </div>
-                  <div class="rate boxh4">
+                  <div class="rate hotel_card4">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -162,17 +162,17 @@
                   </div>
                 </div>
               </div>
-              <div class="s_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_scpic">
+              <div class="card xs_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo xs_photo">
                   <img class="photo" src="images/hebergements/aubergelepanier.jpg" alt="auberge le panier">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Auberge Le Panier</p>
                     <p class="price">Nuit à partir de <span>23 €</span></p>
                   </div>
-                  <div class="rate boxh5">
+                  <div class="rate hotel_card5">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -181,17 +181,17 @@
                   </div>
                 </div>
               </div>
-              <div class="s_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_scpic">
+              <div class="card xs_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo xs_photo">
                   <img class="photo" src="images/hebergements/hotelchezamina.jpg" alt="hôtel chez amina">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Hôtel chez Amina</p>
                     <p class="price">Nuit à partir de <span>96 €</span></p>
                   </div>
-                  <div class="rate boxh6">
+                  <div class="rate hotel_card6">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -206,24 +206,24 @@
         </section>
 
         <!--aside-->
-        <aside class="card ">
-          <div class="c_aside">
+        <aside class="popular">
+          <div class="popular-c">
             <div class="title">
               <h2>Les plus populaires</h2>
               <i class="fa-solid fa-star fa-lg"></i>
             </div>
-            <div class="box-row">
-              <div class="m_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_mcpic">
+            <div class="cards-row">
+              <div class="card s_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo s_photo">
                   <img class="photo" src="images/hebergements/hotellesoleildumatin.jpg" alt="Le soleil du matin" />
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Hôtel Le soleil du matin</p>
                     <p class="price">Nuit à partir de <span>128 €</span></p>
                   </div>
-                  <div class="rate boxh7">
+                  <div class="rate hotel_card7">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -232,19 +232,19 @@
                   </div>
                 </div>
               </div>
-              <div class="m_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_mcpic">
+              <div class="card s_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo s_photo">
                   <img class="photo" src="images/hebergements/aucoeurdeleau.jpg" alt="Au coeur de l'eau">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Au coeur de l'eau </br>
                       Chambres d'hôtes
                     </p>
                     <p class="price">Nuit à partir de <span>71 €</span></p>
                   </div>
-                  <div class="rate boxh8">
+                  <div class="rate hotel_card8">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -253,17 +253,17 @@
                   </div>
                 </div>
               </div>
-              <div class="m_card">
-                <a href="#" class="c_link"></a>
-                <div class="c_mcpic">
+              <div class="card s_card">
+                <a href="#" class="card_link"></a>
+                <div class="c-photo s_photo">
                   <img class="photo" src="images/hebergements/hoteltoutbleuetblanc.jpg" alt="Hôtel Tout bleu et Blanc">
                 </div>
                 <div class="description">
-                  <div class="nameandprice">
+                  <div class="c-nameandprice">
                     <p class="name">Hôtel Tout bleu et Blanc</p>
                     <p class="price">Nuit à partir de <span>68 €</span></p>
                   </div>
-                  <div class="rate boxh9">
+                  <div class="rate hotel_card9">
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -279,77 +279,7 @@
 
 
       <!--Article concernant les activités -->
-      <article id="Activités">
-        <div class="c_activities">
-          <h2>Activités à Marseille</h2>
-          <div class="c_columnbox">
-            <div class="box-column x1">
-              <div class="a_card l">
-                <a href="#" class="c_link"></a>
-                <div class="c_apic">
-                  <img class="photo" src="images/activites/vieuxport.jpg" alt="Vieux Port">
-                </div>
-                <div class="name">
-                  <p>Vieux Port</p>
-                </div>
-              </div>
-            </div>
-            <div class="box-column x2">
-              <div class="a_card m">
-                <a href="#" class="c_link"></a>
-                <div class="c_apic">
-                  <img class="photo" src="images/activites/fortdepomegues.jpg" alt="Fort de Pomègues">
-                </div>
-                <div class="name">
-                  <p>Fort de Pomègues</p>
-                </div>
-              </div>
-              <div class="a_card s">
-                <a href="#" class="c_link"></a>
-                <div class="c_apic">
-                  <img class="photo" src="images/activites/ilesdufrioul.jpg" alt="Îles du Frioul">
-                </div>
-                <div class="name">
-                  <p>Îles du Frioul</p>
-                </div>
-              </div>
-            </div>
-            <div class="box-column x1">
-              <div class="a_card l">
-                <a href="#" class="c_link"></a>
-                <div class="c_apic">
-                  <img class="photo" src="images/activites/parcnationaldescalanques.jpg"
-                    alt="Parc National des Calanques">
-                </div>
-                <div class="name">
-                  <p>Parc National des Calanques</p>
-                </div>
-              </div>
-            </div>
-            <div class="box-column x2">
-              <div class="a_card m">
-                <a href="#" class="c_link"></a>
-                <div class="c_apic">
-                  <img class="photo" src="images/activites/parclongchamp.jpg" alt="Parc Longchamp">
-                </div>
-                <div class="name">
-                  <p>Parc Longchamp</p>
-                </div>
-              </div>
-              <div class="a_card s">
-                <a href="#" class="c_link"></a>
-                <div class="c_apic">
-                  <img class="photo" src="images/activites/notredamedelagarde.jpg" alt="Notre-Dame-de-la-Garde">
-                </div>
-                <div class="name">
-                  <p>Notre-Dame-de-la-Garde</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-    </main>
+      </main>
     <footer>
     </footer>
   </div>
