--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Auberge de La Cannebière</p>
-                    <p class="price">Nuit à partir de <span>25 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">25 €</span></p>
                   </div>
                   <div class="rate hotel_card1">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -111,7 +111,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel du port</p>
-                    <p class="price">Nuit à partir de <span>52 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">52 €</span></p>
                   </div>
                   <div class="rate hotel_card2">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -130,7 +130,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel Les mouettes</p>
-                    <p class="price">Nuit à partir de <span>76 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">76 €</span></p>
                   </div>
                   <div class="rate hotel_card3">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -151,7 +151,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel de la mer</p>
-                    <p class="price">Nuit à partir de <span>46 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">46 €</span></p>
                   </div>
                   <div class="rate hotel_card4">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -170,7 +170,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Auberge Le Panier</p>
-                    <p class="price">Nuit à partir de <span>23 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">23 €</span></p>
                   </div>
                   <div class="rate hotel_card5">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -189,7 +189,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel chez Amina</p>
-                    <p class="price">Nuit à partir de <span>96 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">96 €</span></p>
                   </div>
                   <div class="rate hotel_card6">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -221,7 +221,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel Le soleil du matin</p>
-                    <p class="price">Nuit à partir de <span>128 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">128 €</span></p>
                   </div>
                   <div class="rate hotel_card7">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -242,7 +242,7 @@
                     <p class="name">Au coeur de l'eau </br>
                       Chambres d'hôtes
                     </p>
-                    <p class="price">Nuit à partir de <span>71 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">71 €</span></p>
                   </div>
                   <div class="rate hotel_card8">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -261,7 +261,7 @@
                 <div class="description">
                   <div class="c-nameandprice">
                     <p class="name">Hôtel Tout bleu et Blanc</p>
-                    <p class="price">Nuit à partir de <span>68 €</span></p>
+                    <p class="price">Nuit à partir de <span class="inline_bold">68 €</span></p>
                   </div>
                   <div class="rate hotel_card9">
                     <i class="fa-solid fa-star fa-xs"></i>
@@ -279,8 +279,112 @@
 
 
       <!--Article concernant les activités -->
-      </main>
+
+      <article id="Activités">
+        <div class="activities-c">
+          <h2>Activités à Marseille</h2>
+          <div class="c-cards-column">
+            <div class="cards-section cards-section1">
+              <div class="cards-column cc1">
+                <div class="card xl_card">
+                  <a href="#" class="card_link"></a>
+                  <div class="c-photo xl_photo">
+                    <img class="photo" src="images/activites/vieuxport.jpg" alt="Vieux Port" />
+                  </div>
+                  <div class="description">
+                    <div>
+                      <p class="name">Vieux Port</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="cards-column cc2">
+                <div class="card l_card">
+                  <a href="#" class="card_link"></a>
+                  <div class="c-photo l_photo">
+                    <img class="photo" src="images/activites/fortdepomegues.jpg" alt="Fort de Pomègues" />
+                  </div>
+                  <div class="description">
+                    <p class="name">Fort de Pomègues</p>
+                  </div>
+                </div>
+                <div class="card m_card">
+                  <a href="#" class="card_link"></a>
+                  <div class="c-photo m_photo">
+                    <img class="photo" src="images/activites/ilesdufrioul.jpg" alt="Îles du Frioul" />
+                  </div>
+                  <div class="description">
+                    <p class="name">Îles du Frioul</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="cards-section cards-section2">
+              <div class="cards-column cc1">
+                <div class="card xl_card">
+                  <a href="#" class="card_link"></a>
+                  <div class="c-photo xl_photo">
+                    <img class="photo" src="images/activites/parcnationaldescalanques.jpg"
+                      alt="Parc National des Calanques" />
+                  </div>
+                  <div class="description">
+                    <p class="name">Parc National Des Calanques</p>
+                  </div>
+                </div>
+              </div>
+              <div class="cards-column cc2r">
+                <div class="card l_card">
+                  <a href="#" class="card_link"></a>
+                  <div class="c-photo l_photo">
+                    <img class="photo" src="images/activites/parclongchamp.jpg" alt="Parc Longchamp" />
+                  </div>
+                  <div class="description">
+                    <p class="name">Parc Longchamp</p>
+                  </div>
+                </div>
+                <div class="card m_card">
+                  <a href="#" class="card_link"></a>
+                  <div class="c-photo m_photo">
+                    <img class="photo" src="images/activites/notredamedelagarde.jpg" alt="Notre-Dame-de-la-Garde">
+                  </div>
+                  <div class="description">
+                    <p class="name">Notre-Dame-de-la-Garde</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </main>
+
+    <!--Footer-->
     <footer>
+      <div class="footer-c">
+        <div class="c-footer_links">
+          <h3>A propos</h3>
+          <ul>
+            <li><a href="#">Fonctionnement du site</a></li>
+            <li><a href="#">Conditions générales de vente</a></li>
+            <li><a href="#">Données et confidentialité</a></li>
+          </ul>
+        </div>
+        <div class="c-footer_links">
+          <h3>Nos hébergements</h3>
+          <ul>
+            <li><a href="#">Charte qualité</a></li>
+            <li><a href="#">Soumettre votre hôtel</a></li>
+          </ul>
+        </div>
+        <div class="c-footer_links">
+          <h3>Assitance</h3>
+          <ul>
+            <li><a href="#">Centre d'aide</a></li>
+            <li><a href="#">Nous contacter</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
