--- a/Index.html
+++ b/Index.html
@@ -22,8 +22,8 @@
       <!--Header avec logo et menu de navigation à droite-->
       <img id="booki" src="images/logo/Booki.png" alt="Booki" />
       <nav>
-        <a href="#Hébergements">Hébergements</a>
-        <a href="#Activités">Activités</a>
+        <a href="#lodging">Hébergements</a>
+        <a href="#activities">Activités</a>
       </nav>
     </header>
     <main>
@@ -77,7 +77,7 @@
 
 
       <!--Article conternant les hébgements et la section populaires -->
-      <article id="Hébergements">
+      <article id="lodging">
         <section class="hotels">
           <div class="hotels-c">
             <h2>Hébergements à Marseille</h2>
@@ -280,7 +280,7 @@
 
       <!--Article concernant les activités -->
 
-      <article id="Activités">
+      <article id="activities">
         <div class="activities-c">
           <h2>Activités à Marseille</h2>
           <div class="c-cards-column">
