--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="body-c">
     <header>
-      <!--Header avec logo et menu de navigation à droite-->
+      <!--Header whith nav-->
       <img id="booki" src="images/logo/Booki.png" alt="Booki" />
       <nav>
         <a href="#lodging">Hébergements</a>
@@ -31,7 +31,7 @@
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre ville ou en pleine nature</p>
 
-        <!--Partie avec formulaire de recherche pour un lieu-->
+        <!--research form section-->
         <form id="searchbar" method="post" action="http://traitement.php">
           <div id="l-dot"><i class="fa-solid fa-location-dot fa-lg"></i></div>
           <input type="search" id="location" value="Marseille,France" name="location" />
@@ -42,7 +42,7 @@
         </form>
 
 
-        <!--Ajout d'un formulaire pour les filtres -->
+        <!--filter form section-->
         <form id="c-filters" method="post" action="http://traitement.php">
           <p class="title">Filtres</p>
           <div id="c-bars"><label class="filter_value" for="economique" id="economique">
@@ -76,7 +76,7 @@
       </article>
 
 
-      <!--Article conternant les hébgements et la section populaires -->
+      <!--lodging article with popular aside -->
       <article id="lodging">
         <section class="hotels">
           <div class="hotels-c">
@@ -278,7 +278,7 @@
       </article>
 
 
-      <!--Article concernant les activités -->
+      <!--activities article -->
 
       <article id="activities">
         <div class="activities-c">
@@ -298,7 +298,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="cards-column cc2">
                 <div class="card l_card">
                   <a href="#" class="card_link"></a>
