première correction html

--- a/Index.html
+++ b/Index.html
@@ -45,23 +45,23 @@
         <!--filter form section-->
         <form id="c-filters" method="post" action="http://traitement.php">
           <p class="title">Filtres</p>
-          <div id="c-bars"><label class="filter_value" for="economique" id="economique">
-              <input class="filter" type="checkbox" name="economique" />
+          <div id="c-bars"><label class="filter_value" for="economique">
+              <input class="filter" type="checkbox" name="economique" id="economique"/>
               <div class="filter_icon"><i class="fa-solid fa-money-bill-wave"></i></div>
               &#201;conomique
             </label>
-            <label class="filter_value" for="familial" id="familial">
-              <input class="filter" type="checkbox" name="familial" />
+            <label class="filter_value" for="familial">
+              <input class="filter" type="checkbox" name="familial" id="familial"/>
               <div class="filter_icon"><i class="fa-solid fa-child-reaching fa-lg"></i></div>
               Familial
             </label>
-            <label class="filter_value" for="Romantique" id="Romantique">
-              <input class="filter" type="checkbox" name="Romantique" />
+            <label class="filter_value" for="Romantique" >
+              <input class="filter" type="checkbox" name="Romantique" id="Romantique"/>
               <div class="filter_icon"><i class="fa-solid fa-heart"></i></div>
               Romantique
             </label>
-            <label class="filter_value" for="Animaux" id="Animaux">
-              <input class="filter" type="checkbox" name="Animaux" />
+            <label class="filter_value" for="Animaux">
+              <input class="filter" type="checkbox" name="Animaux" id="Animaux"/>
               <div class="filter_icon"><i class="fa-solid fa-dog"></i></div>
               Animaux autorisés
             </label>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="description">
                   <div class="c-nameandprice">
-                    <p class="name">Au coeur de l'eau </br>
+                    <p class="name">Au coeur de l'eau <br>
                       Chambres d'hôtes
                     </p>
                     <p class="price">Nuit à partir de <span class="inline_bold">71 €</span></p>
