html et css vérifiés par w3s

--- a/Index.html
+++ b/Index.html
@@ -47,22 +47,22 @@
           <p class="title">Filtres</p>
           <div id="c-bars"><label class="filter_value" for="economique">
               <input class="filter" type="checkbox" name="economique" id="economique"/>
-              <div class="filter_icon"><i class="fa-solid fa-money-bill-wave"></i></div>
+              <i class="fa-solid fa-money-bill-wave"></i>
               &#201;conomique
             </label>
             <label class="filter_value" for="familial">
               <input class="filter" type="checkbox" name="familial" id="familial"/>
-              <div class="filter_icon"><i class="fa-solid fa-child-reaching fa-lg"></i></div>
+              <i class="fa-solid fa-child-reaching fa-lg"></i>
               Familial
             </label>
             <label class="filter_value" for="Romantique" >
               <input class="filter" type="checkbox" name="Romantique" id="Romantique"/>
-              <div class="filter_icon"><i class="fa-solid fa-heart"></i></div>
+              <i class="fa-solid fa-heart"></i>
               Romantique
             </label>
             <label class="filter_value" for="Animaux">
               <input class="filter" type="checkbox" name="Animaux" id="Animaux"/>
-              <div class="filter_icon"><i class="fa-solid fa-dog"></i></div>
+              <i class="fa-solid fa-dog"></i>
               Animaux autorisés
             </label>
           </div>
